--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.19.0"
+    "react-redux": "^9.0.2",
+    "react-router-dom": "^6.19.0",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
