--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "axios": "^1.6.3",
     "framer-motion": "^10.16.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
